Return serialized Record object in API response
